avatar squash fixed

--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -10,7 +10,9 @@
 }
 
 .avatar-bordered {
-  width: 40px;
+  object-fit: cover;
+  height: 60px;
+  width: 60px;
   border-radius: 50%;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
@@ -24,6 +26,7 @@
 }
 
 .avatar-small {
+  height: 60px;
   width: 60px;
   border-radius: 50%;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
